      EULA_Conary_Dual_License.txt in order to highlight the contents
      of the beginning of the file, which describe a choice of license
      terms.  The contents of the file are not changed, and the licenses
      under which Conary may be used are not changed. (CNY-3168)

  o API Changes:
    * Added removeInvalidRollbacks() to client API. (CNY-2933)

  o Bug Fixes:
    * An internal function used to install files no longer leaks a file
      descriptor on error. (CNY-3152)
    * Unknown errors while retrieving PGP keys for archive verification
      are gracefully handled. (CNY-3120)
    * The cvc refresh command now ignores negative cache entries. (CNY-3157)
    * The cvc sign command properly handles keys specified by key ID, in
      addition to fingerprints. (CNY-3139)
    * The conary updateall --items command now honors --labels,
      --full-versions and --flavors flags. (CNY-3138)
    * The --lsprof option now writes out profiling information even if an
      exception occurs, for both the conary and cvc commands.
    * Dependency numbers in temporary dependency checking tables no longer
      overlap dependency numbers in the persistent database.
    * Dependencies with multiple flags were not marked as satisfied during
      dependency resolution passes, forcing extra work on subsequent passes.
    * Local rollbacks would fail to restore contents when a files metadata
      changed but the contents stayed the same.
    * Generating local rollbacks would fail for nonroot users when the file
      was unreadable due to permissions.
    * The ccs2tar script uses tarfile.open() in a way that is compatible
      with both python 2.4 and 2.6 (CNY-3160)
    * Brace expansion produces results similar to bash. (CNY-3158)
    * Trove searches with invalid (non-ASCII) input no longer cause a
      crash on PostgreSQL-backed repositories. (CNY-3165)
    * Flavor processing in depSetFreeze did not properly handle return